<resources>
    <!-- General -->
    <string name="app_name">WorkoutLogger</string>
    <string name="readable_date_format">EEEE, d MMMM yyyy</string>
    <string name="decimal_separator">.</string>
    <string name="weight_unit">kg.</string>
    <string name="main_title">Workout Logger</string>
    <string name="open_db_error">Error opening the database</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--View training sessions activity-->
    <string name="main_activity_save_session_ok">Training session successfully saved</string>
    <string name="main_activity_save_session_error">Error saving training session</string>
    <string name="main_activity_menu_list_workouts">List of workouts</string>
    <string name="main_activity_menu_view_graph">View graph</string>
    <string name="main_activity_menu_backup">Backup data</string>
    <string name="main_activity_menu_save_xml">Save XML</string>
    <string name="main_activity_menu_load_xml">Load XML</string>
    <string name="main_activity_menu_preferences">Application preferences</string>
    <string name="main_activity_menu_settings">Settings</string>
    <string name="main_activity_load_xml_ok">XML file loaded correctly</string>
    <string name="main_activity_load_xml_error">Error loading XML file</string>
    <string name="main_activity_save_xml_ok">XML file saved correctly</string>
    <string name="main_activity_save_xml_error">Error saving XML file</string>
    <!--string name="main_activity_"></string-->

    <!--View training session detail-->
    <string name="training_session_detail_date">Date:</string>
    <string name="training_session_detail_workout">Workout:</string>
    <string name="training_session_detail_comment">Comment:</string>
    <string name="training_session_detail_tracks_loads">Tracks and loads in the session: </string>
    <string name="training_session_detail_title">Training session detail</string>
    <string name="training_session_detail_menu_delete">Delete</string>
    <string name="training_session_detail_warning_delete">
        Do you really want to delete this training session?</string>
    <string name="training_session_detail_warning_accept">Delete</string>
    <string name="training_session_detail_warning_cancel">Cancel</string>
    <string name="training_session_detail_delete_error">Error deleting the training session</string>
    <string name="training_session_detail_exercise_data">Exercise carried out</string>
    <string name="training_session_data_access_error">Error accessing the training sessions data</string>
    <string name="training_session_detail_no_load"><em>No loads</em></string>
    <string name="training_session_detail_no_comment"><em>No comment</em></string>
    <string name="menu_training_session_detail_delete">Delete</string>
    <string name="menu_training_session_detail_edit">Edit</string>

    <!--View new training session -->
    <string name="new_training_session_title">New training session</string>
    <string name="new_training_session_edit_title">Edit training session</string>
    <string name="new_training_session_date">Date:</string>
    <string name="new_training_session_group">Select a workout</string>
    <string name="new_training_session_workout">Workout:</string>
    <string name="new_training_session_tracks">Tracks and loads record:</string>
    <string name="new_training_session_comment">Comment</string>
    <string name="new_training_session_no_loads"><em>No loads</em></string>
    <string name="new_training_session_empty">No exercise carried out</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_training_session">New training session</string>
    <string name="menu_new_training_session_save">Save training session</string>

    <!-- Preferences window -->
    <string name="preferences_title">Settings</string>
    <string name="preferences_locale">Language</string>
    <string name="preferences_locale_sub">Select the application language</string>
    <string name="preferences_locale_cancel">Cancel</string>

    <!-- View exercise data -->
    <string name="exercise_data_title">Loads and weights</string>
    <string name="exercise_data_completed">Exercise completed</string>
    <string name="menu_exercise_data_save">Save</string>

    <!-- Activity define workout -->
    <string name="define_workout_name">Name</string>
    <string name="define_workout_track_list">Track list</string>
    <string name="define_workout_new">Add or edit track / muscle group</string>
    <string name="define_workout_title">Define new workout</string>
    <string name="define_workout_contextual_edit">Edit track</string>
    <string name="define_workout_contextual_delete">Delete track</string>
    <string name="define_workout_no_loads"><em>No loads</em></string>
    <string name="define_workout_save_error_empty_name">The name cannot be empty</string>
    <string name="define_workout_save_error_no_tracks">
        At least one track must be defined in the workout</string>
    <string name="define_workout_save_error_exists">A workout with the same name already exists</string>
    <string name="define_workout_save_error_db">Error opening the database</string>
    <string name="menu_define_workout_save">Save</string>

    <!-- Activity define track -->
    <string name="define_track_title">Define new track</string>
    <string name="define_track_group">Muscle group</string>
    <string name="define_track_loads">Loads in the track</string>
    <string name="define_track_load_default">Lifting bar</string>
    <string name="define_track_error_empty">The custom name cannot be empty</string>
    <string name="define_track_error_exists">The track defined already exists</string>
    <string name="menu_define_track_save">Save</string>

    <!-- Activity list workouts -->
    <string name="list_workouts_view">List of workouts</string>
    <string name="list_workouts_warning_delete_workout_title">Delete workout</string>
    <string name="list_workouts_warning_delete_workout_text_with">
        <b>Warning</b>: there are training sessions associated to this workout.
        If you delete it, the sessions will also be erased.\n\n
        Do you really want to delete the workout?
    </string>
    <string name="list_workouts_warning_delete_workout_text_without">
        Do you really want to delete the workout?</string>
    <string name="list_workouts_warning_delete_workout_accept">Delete</string>
    <string name="list_workouts_warning_delete_workout_cancel">Cancel</string>
    <string name="list_workouts_warning_delete_workout_cancelled">
        Delete operation cancelled by the user</string>"
    <string name="list_workouts_tracks">tracks</string>
    <string name="list_workouts_completed_sessions">sessions completed</string>

    <!-- Workout details -->
    <string name="detail_workout_title">List of tracks and loads</string>
    <string name="detail_workout_string_tracks_singular">track in the workout</string>
    <string name="detail_workout_string_tracks_plural">tracks in the workout</string>
    <string name="detail_workout_string_training_sessions_singular">training session completed</string>
    <string name="detail_workout_string_training_sessions_plural">training sessions completed</string>
    <string name="detail_workout_delete_error">Error deleting the workout</string>
    <string name="menu_detail_workout_delete">Delete</string>

    <!-- View statistics -->
    <string name="statistics_workout_title">Workout:</string>
    <string name="statistics_tracks_title">Tracks:</string>
    <string name="statistics_global_index"><b>Global index</b></string>
    <string name="statistics_error_data">Data error</string>
    <string name="statistics_graph_no_title">(No title)</string>

</resources>
