<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_activity_menu_list_workouts"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/main_activity_menu_list_workouts"/>
        <item
            android:id="@+id/main_activity_menu_view_graph"
            android:title="@string/main_activity_menu_view_graph"
            android:icon="@drawable/ic_show_chart_black_48dp" />
    </group>

    <item android:title="@string/main_activity_menu_preferences">
        <menu>
            <item
                android:id="@+id/main_activity_menu_settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/main_activity_menu_settings" />
        </menu>
    </item>


    <item android:title="@string/main_activity_menu_backup">
        <menu>
            <item
                android:id="@+id/main_activity_menu_save_xml"
                android:icon="@drawable/ic_file_upload_black_48dp"
                android:title="@string/main_activity_menu_save_xml" />
            <item
                android:id="@+id/main_activity_menu_load_xml"
                android:icon="@drawable/ic_file_download_black_48dp"
                android:title="@string/main_activity_menu_load_xml" />
        </menu>
    </item>

</menu>
