<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eus.julenugalde.workoutlogger.view.MainActivity" >
    <item
        android:id="@+id/main_activity_menu_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_black_18dp"
        android:title="@string/main_activity_menu_settings" />
    <item
        android:id="@+id/main_activity_menu_list_workouts"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_format_align_left_black_18dp"
        android:title="@string/main_activity_menu_list_workouts"/>
    <item
        android:id="@+id/main_activity_menu_view_graph"
        android:title="@string/main_activity_menu_view_graph"
        android:icon="@drawable/ic_show_chart_black_18dp"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/main_activity_menu_backup">
        <menu>
            <item
                android:id="@+id/main_activity_menu_save_xml"
                app:showAsAction="never"
                android:icon="@drawable/ic_file_upload_black_18dp"
                android:title="@string/main_activity_menu_save_xml" />
            <item
                android:id="@+id/main_activity_menu_load_xml"
                app:showAsAction="never"
                android:icon="@drawable/ic_file_download_black_18dp"
                android:title="@string/main_activity_menu_load_xml" />
        </menu>
    </item>
</menu>
