<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop ="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="eus.julenugalde.workoutlogger.view.ActivityTrainingSessionDetail">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/FrameTrainingSessionDetail"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Date info -->
        <TextView
            android:id="@+id/DateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/training_session_detail_date"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LblTrainingSessionDetailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/DateTitle" />

        <!--Workout info -->
        <TextView
            android:id="@+id/WorkoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/training_session_detail_workout"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/DateTitle" />

        <TextView
            android:id="@+id/LblTrainingSessionDetailWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@id/WorkoutTitle"
            app:layout_constraintTop_toBottomOf="@id/DateTitle" />

        <!--Comment-->
        <TextView
            android:id="@+id/CommentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/training_session_detail_comment"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/WorkoutTitle" />

        <TextView
            android:id="@+id/LblTrainingSessionDetailComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/font_size_normal"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/CommentTitle" />

        <!--Detail of tracks and loads-->
        <TextView
            android:id="@+id/LblTracksLoadsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/training_session_detail_tracks_loads"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblTrainingSessionDetailComment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblTracksLoadsTitle" >
            <ListView
                android:id="@+id/LstTrainingSessionDetailTracksLoads"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
