<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="eus.julenugalde.workoutlogger.view.ActivityDefineWorkout">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--Workout name-->
        <TextView
            android:id="@+id/LblDefineWorkoutName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/define_workout_name"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineWorkoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/font_size_normal"
            android:textColor="@color/colorBlack"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="@id/LblDefineWorkoutName"
            app:layout_constraintTop_toBottomOf="@id/LblDefineWorkoutName" />

        <!--Track list -->
        <TextView
            android:id="@+id/LblDefineWorkoutListTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/define_workout_track_list"
            android:textSize="@dimen/font_size_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TxtDefineWorkoutName"/>
        <Button
            android:id="@+id/BtnDefineWorkoutNewTrack"
            android:textAllCaps="false"
            android:text="@string/define_workout_new"
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_size_normal"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblDefineWorkoutListTracks"/>
        <ListView
            android:id="@+id/LstDefineWorkoutsTracks"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/BtnDefineWorkoutNewTrack"
            app:layout_constraintStart_toStartOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
