<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="eus.julenugalde.workoutlogger.view.ActivityDefineTrack">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <!-- Track name -->
        <TextView
            android:id="@+id/LblDefineTrackNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_title"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/define_track_group"/>
        <!--TODO Include the icon to the left of the spinner-->
        <Spinner
            android:id="@+id/CmbDefineTrackDefaultGroups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblDefineTrackNameTitle"/>
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineTrackCustomGroup"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/CmbDefineTrackDefaultGroups"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblDefineTrackNameTitle"/>

        <!-- Track loads -->
        <TextView
            android:id="@+id/LblDefineTrackLoadsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/define_track_loads"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_title"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CmbDefineTrackDefaultGroups" />
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineTrackLoad0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:text="@string/define_track_load_default"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LblDefineTrackLoadsTitle" />
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineTrackLoad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TxtDefineTrackLoad0" />
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineTrackLoad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TxtDefineTrackLoad1" />
        <eus.julenugalde.workoutlogger.view.EditTextWithCounter
            android:id="@+id/TxtDefineTrackLoad3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TxtDefineTrackLoad2" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
